[package]
name = "code-search"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.15"
colored = "2.1.0"
tree-sitter = "0.22.6"
tree-sitter-rust = "0.21.2"
tree-sitter-java = "0.21.0"
tree-sitter-python = "0.21.0"
tree-sitter-c = "0.21.4"
tree-sitter-cpp = "0.22.3"
tree-sitter-javascript = "0.21.4"
tree-sitter-go = "0.21.2"
tree-sitter-c-sharp = "0.21.3"
tempfile = "3.12.0"
prettytable = "0.10.0"
indicatif = "0.17.8"
